--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "description": "The official site for Coldbox theme",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp sass"
   },
-  "author": "Toshihiro Kanai",
+  "author": "Toshihiro Kanai <i@miruc.co>",
   "license": "GPL-2.0+",
   "devDependencies": {
-    "browser-sync": "^2.18.12",
     "cssnext": "^1.8.4",
-    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
-    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.0",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp": "^3.9.1"
+  }
 }
