--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp sass"
+    "build": "npm-run-all -s scss:*",
+    "scss:compile": "node-sass-chokidar --output-style expanded --source-map true sass/style.scss style.css",
+    "scss:autoprefixer": "postcss style.css --use autoprefixer -o style.css",
+    "scss-dev:watch": "chokidar 'sass/*.scss' -c 'npm-run-all -p scss:compile'",
+    "scss:min": "postcss --no-map style.css --config postcss.config.js -o style.min.css"
   },
   "author": "Toshihiro Kanai <i@miruc.co>",
   "license": "GPL-2.0+",
   "devDependencies": {
+    "autoprefixer": "^9.0.0",
+    "cssnano": "^4.0.3",
     "cssnext": "^1.8.4",
-    "gulp-autoprefixer": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-cssmin": "^0.2.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.0",
-    "postcss": "^6.0.1",
-    "postcss-cssnext": "^2.11.0"
+    "gulp-sourcemaps": "^2.6.4",
+    "node-sass": "^4.9.2",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
+    "postcss": "^7.0.0",
+    "postcss-cli": "^5.0.1",
+    "postcss-cssnext": "^3.1.0"
   },
   "dependencies": {
     "gulp": "^3.9.1"
