--- a/package.json
+++ b/package.json
@@ -17,19 +17,11 @@
     "autoprefixer": "^9.0.0",
     "cssnano": "^4.0.3",
     "cssnext": "^1.8.4",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
     "node-sass": "^4.9.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "postcss": "^7.0.0",
-    "postcss-cli": "^5.0.1",
-    "postcss-cssnext": "^3.1.0"
+    "postcss-cli": "^5.0.1"
   },
-  "dependencies": {
-    "gulp": "^3.9.1"
-  }
+  "dependencies": {}
 }
